# Ctrlr_Cmake

./: .gitignore  CMakeLists.txt  CMakelists_BACKUP.txt
Builds/CodeBlocksLinux/: resources.rc
Builds/LinuxMakefile/: Makefile
Builds/MacOSX/: Info-AU.plist  Info-AUv3_AppExtension.plist  Info-Standalone_Plugin.plist  Info-VST.plist
Builds/VisualStudio2017/: Ctrlr.sln  Ctrlr_SharedCode.vcxproj  Ctrlr_SharedCode.vcxproj.filters  Ctrlr_StandalonePlugin.vcxproj  Ctrlr_VST.vcxproj  Ctrlr_VST3.vcxproj  resources.rc
Builds/VisualStudio2019/: Ctrlr.sln  Ctrlr_SharedCode.vcxproj  Ctrlr_SharedCode.vcxproj.filters  Ctrlr_StandalonePlugin.vcxproj  Ctrlr_VST.vcxproj  Ctrlr_VST.vcxproj.filters  Ctrlr_VST3.vcxproj  resources.rc
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JucePluginDefines.h  include_juce_audio_plugin_client_VST2.cpp
Source/Core/: CtrlrIDManager.cpp  CtrlrIDManager.h  CtrlrIDs.h
Source/Core/CtrlrManager/: CtrlrManager.cpp  CtrlrManager.h  CtrlrManagerInstance.cpp  CtrlrManagerVst.cpp
Source/Core/CtrlrModulator/: CtrlrModulator.h
Source/Core/CtrlrPanel/: CtrlrPanel.cpp  CtrlrPanel.h  CtrlrPanelFileOperations.cpp
Source/Core/StandaloneWrapper/: CtrlrStandaloneApplication.cpp  CtrlrStandaloneWindow.cpp
Source/Lua/: CtrlrLuaDebugger.cpp  CtrlrLuaDebugger.h  CtrlrLuaManager.h  CtrlrLuaMultiTimer.h  CtrlrLuaObject.h  CtrlrLuaObjectWrapper.h  CtrlrLuaUtils.cpp  CtrlrLuaUtils.h
Source/Lua/JuceClasses/: LAffineTransform.h  LAlertWindow.h  LAsyncUpdater.h  LAttributedString.h  LAudio.cpp  LAudioFile.h  LAudioFormat.h  LAudioPlayHead.h  LAudioSampleBuffer.h  LAudioThumbnail.h  LBigInteger.h  LBorderSize.h  LBubbleMessageComponent.h  LButton.h  LColour.h  LColourGradient.h  LComboBox.h  LComponent.h  LComponentPeer.h  LCore.cpp  LDrawable.h  LExpression.h  LFile.h  LFileListComponent.h  LFileTreeComponent.h  LFont.h  LGlobalFunctions.h  LGlyphArrangement.h  LGraphics.h  LImage.h  LInputStream.h  LJuce.h  LJustification.h  LKeyPress.h  LLabel.h  LLine.h  LLookAndFeel.h  LMemoryBlock.h  LMemoryInputStream.h  LMidiBuffer.h  (+29 more)
Source/MIDI/: CtrlrMIDIDevice.h  CtrlrMIDIDeviceManager.h  CtrlrMIDIFilter.h  CtrlrMidiInputComparator.h  CtrlrMidiInputComparatorMulti.h  CtrlrMidiInputComparatorSingle.h  CtrlrMidiMessage.cpp  CtrlrMidiMessage.h  CtrlrMidiMessageEx.cpp  CtrlrMidiMessageEx.h  CtrlrOwnedMidiMessage.h
Source/MIDI/CtrlrMIDILibrary/: CtrlrMIDILibrary.h
Source/Misc/luabind/src/: function.cpp  open.cpp
Source/Native/: CtrlrGeneric.h  CtrlrLinux.h  CtrlrMac.cpp  CtrlrMac.h  CtrlrNative.h  CtrlrWindows.h
Source/Plugin/: CtrlrProcessor.cpp  CtrlrProcessor.h  CtrlrProcessorEditorForLive.h
Source/Resources/XML/: CtrlrIDs.xml
Source/UIComponents/: CtrlrAbout.cpp  CtrlrAbout.h  CtrlrComponentSelection.h  CtrlrLogViewer.h  CtrlrTextEditor.h  CtrlrValueMap.h  CtrlrValueTreeEditor.cpp  CtrlrValueTreeEditor.h
Source/UIComponents/CtrlrApplicationWindow/: CtrlrDocumentPanel.h  CtrlrEditor.h  CtrlrEditorApplicationCommands.cpp  CtrlrEditorApplicationCommandsHandlers.cpp  CtrlrEditorApplicationCommandsMenus.cpp  CtrlrSettings.h
Source/UIComponents/CtrlrBuildScript/: CtrlrBuildScriptDialogWindow.cpp  CtrlrBuildScriptDialogWindow.h  CtrlrBuildScriptIDESection.cpp  CtrlrBuildScriptIDESection.h  CtrlrBuildScriptMain.cpp  CtrlrBuildScriptMain.h  CtrlrBuildScriptOptionsSection.cpp  CtrlrBuildScriptOptionsSection.h  CtrlrBuildScriptOutputSection.cpp  CtrlrBuildScriptOutputSection.h  CtrlrBuildScriptVST3Section.cpp  CtrlrBuildScriptVST3Section.h  IDESection.cpp  IDESection.h  OptionsSection.cpp  OptionsSection.h  OutputSection.cpp  OutputSection.h  VST3Section.cpp  VST3Section.h
Source/UIComponents/CtrlrComponents/: CtrlrCombo.cpp  CtrlrCombo.h  CtrlrComponent.cpp  CtrlrComponent.h  CtrlrComponentTypeManager.cpp  CtrlrComponentTypeManager.h  CtrlrCustomComponent.h  CtrlrFilmStripPainter.cpp  CtrlrFilmStripPainter.h
Source/UIComponents/CtrlrComponents/Buttons/: CtrlrButton.cpp  CtrlrButton.h  CtrlrCustomButtonInternal.cpp  CtrlrCustomButtonInternal.h  CtrlrHyperlink.cpp  CtrlrHyperlink.h  CtrlrImageButton.cpp  CtrlrImageButton.h  CtrlrToggleButton.cpp  CtrlrToggleButton.h
Source/UIComponents/CtrlrComponents/Groups/: CtrlrGroup.cpp  CtrlrGroup.h  CtrlrTabsComponent.cpp  CtrlrTabsComponent.h
Source/UIComponents/CtrlrComponents/Labels/: CtrlrImage.cpp  CtrlrImage.h  CtrlrLCDLabel.cpp  CtrlrLCDLabel.h  CtrlrLabel.cpp  CtrlrLabel.h
Source/UIComponents/CtrlrComponents/Sliders/: CtrlrFixedImageSlider.cpp  CtrlrFixedImageSlider.h  CtrlrFixedSlider.cpp  CtrlrFixedSlider.h  CtrlrImageSlider.cpp  CtrlrImageSlider.h  (+2 more)
Source/UIComponents/CtrlrLua/: CtrlrLuaConsole.cpp  CtrlrLuaConsole.h
Source/UIComponents/CtrlrMIDI/: CtrlrMIDIBuffer.h  CtrlrMIDIBufferEditor.cpp  CtrlrMIDIBufferEditor.h  CtrlrMIDICalculator.cpp  CtrlrMIDICalculator.h  CtrlrMIDIMon.h  CtrlrMIDISettingsDevices.cpp  CtrlrMIDISettingsDevices.h  CtrlrMIDISettingsDialog.cpp  CtrlrMIDISettingsDialog.h  CtrlrMIDISettingsRouting.cpp  CtrlrMIDISettingsRouting.h
Source/UIComponents/CtrlrPanel/: CtrlrPanelBatchBuildScriptComponent.cpp  CtrlrPanelBatchBuildScriptComponent.h  CtrlrPanelCanvas.h  CtrlrPanelCanvasLayer.h  CtrlrPanelComponentProperties.cpp  CtrlrPanelComponentProperties.h  CtrlrPanelFindProperty.cpp  CtrlrPanelFindProperty.h  CtrlrPanelLayerList.cpp  CtrlrPanelLayerList.h  CtrlrPanelLayerListItem.cpp  CtrlrPanelLayerListItem.h  CtrlrPanelModulatorList.cpp  CtrlrPanelModulatorList.h  CtrlrPanelModulatorListTree.cpp  CtrlrPanelModulatorListTree.h  CtrlrPanelProperties.h  CtrlrPanelResourceEditor.h  CtrlrPanelUtilities.cpp  CtrlrPanelUtilities.h  CtrlrPanelViewport.cpp  CtrlrPanelViewport.h  CtrlrViewport.cpp  CtrlrViewport.h
Source/UIComponents/CtrlrPropertyEditors/: CtrlrPropertyComponent.cpp  CtrlrPropertyComponent.h
Source/UIComponents/CtrlrWindowManagers/: CtrlrChildWindow.cpp  CtrlrChildWindow.h  CtrlrChildWindowContainer.cpp  CtrlrChildWindowContainer.h  CtrlrChildWindowContent.h  CtrlrManagerWindowManager.cpp  CtrlrManagerWindowManager.h  CtrlrPanelWindowManager.cpp  CtrlrPanelWindowManager.h
(+41 files in other folders)
